# websockets-chatbot-demo

./: .gitignore  README.md  env.example  main.py  pyproject.toml
app/: config.py
app/agents/: runner.py
app/core/: dispatcher.py  exceptions.py  services.py
app/db/: __init__.py  session.py
app/models/: __init__.py  base.py
app/schemas/: users.py
app/services/: __init__.py
